created function to store input data in local storage

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
               <label for="emailInput">Email</label>
               <input class="form-control" data-type='emailAddress' type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
             </div>
-            <div class="radio" data-type='coffeeSize'>
+            <div class="radio">
               <label>
-                <input type="radio"  name="size" value="short">
+                <input type="radio"  name="size" value="short" data-type='coffeeSize'>
                 Short
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="size" value="tall" checked>
+                <input type="radio" name="size" value="tall" checked data-type='coffeeSize'>
                 Tall
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="size" value="grande">
+                <input type="radio" name="size" value="grande" data-type='coffeeSize'>
                 Grande
               </label>
             </div>
