added recent orders tHTML table

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
       </div>
     </section>
+    <table class="Recent-Order" data-coffee-orders>Recent Orders</table>
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
